--- a/_SSHAnsible/Ansible Scripts/realdevices/sip.yml
+++ b/_SSHAnsible/Ansible Scripts/realdevices/sip.yml
@@ -36,7 +36,7 @@
           - max-dn 12
           - max-pool 12
           - authenticate register
-          - create profile sync
+          - create profile
       tags:
         - sipdomain
       
