--- a/_SSHAnsible/Ansible Scripts/realdevices/sip.yml
+++ b/_SSHAnsible/Ansible Scripts/realdevices/sip.yml
@@ -30,6 +30,7 @@
     - name: "Assign SIP Domain"
       ios_command:
         commands:
+          - config t
           - voice register global
           - mode cme
           - "source-address 10.#$3AT#.100.8 port 5060"
@@ -37,6 +38,7 @@
           - max-pool 12
           - authenticate register
           - create profile
+          - end
       tags:
         - sipdomain
       
@@ -44,6 +46,7 @@
     - name: "Create Directory Numbers"
       ios_command:
         commands: 
+          - config t
           - voice register dn 1
           - "number #$3AT#34"
           - allow watch
@@ -52,12 +55,14 @@
           - "number #$3AT#43"
           - allow watch
           - "name #$3AT#43"
+          - end
       tags:
         - sipdn
     
     - name: "Register Accounts"
       ios_command:
         commands: 
+          - config t
           - voice register pool 1
           - "id mac #M0B1LEMAC1#"
           - number 1 dn 1
@@ -70,5 +75,6 @@
           - dtmf-relay sip-notify
           - "username #$3AT#43 password #$3AT#43"
           - codec g711ulaw
+          - end
       tags:
         - register
