--- a/_SSHAnsible/Ansible Scripts/realdevices/ivrs-28.yml
+++ b/_SSHAnsible/Ansible Scripts/realdevices/ivrs-28.yml
@@ -1,6 +1,6 @@
 ---
 
-# Monitor Number    = #$3AT#
+# Monitor Number    = 28
 
   - name: "CUCM Config: Interactive Voice Response"
     hosts: cucm
@@ -13,9 +13,9 @@
             - config t
             - dial-peer voice 69 voip
             - service rivanaa out-bound
-            - "destination-pattern #$3AT#69"
-            - "session target ipv4:10.#$3AT#.100.8"
-            - "incoming called-number #$3AT#69"
+            - "destination-pattern 2869"
+            - "session target ipv4:10.28.100.8"
+            - "incoming called-number 2869"
             - dtmf-relay h245-alphanumeric
             - codec g711ulaw
             - no vad
@@ -52,13 +52,13 @@
             - param max-time-vm-retry 2
             - param voice-mail 1234
             - param max-time-call-retry 700
-            - "param aa-pilot #$3AT#69"
+            - "param aa-pilot 2869"
             - "service rivanqueue flash:app-b-acd-3.0.0.2.tcl"
             - param queue-len 15
-            - "param aa-hunt1 #$3AT#00"
-            - "param aa-hunt2 #$3AT#01"
-            - "param aa-hunt3 #$3AT#77"
-            - "param aa-hunt4 #$3AT#33"
+            - "param aa-hunt1 2800"
+            - "param aa-hunt2 2801"
+            - "param aa-hunt3 2877"
+            - "param aa-hunt4 2833"
             - param queue-manager-debugs 1
             - param number-of-hunt-grps 4
             - end
