--- a/_SSHAnsible/Ansible Scripts/realdevices/cucm-sem/run_all-28.yml
+++ b/_SSHAnsible/Ansible Scripts/realdevices/cucm-sem/run_all-28.yml
@@ -1,25 +1,10 @@
 ---
-  - name: CoreTAAS
-    hosts: ctaas
-    gather_facts: false
-    connection: local
-
-    tasks:
-      - include_tasks: ctaas.yml
-  
-  - name: CoreBABA
-    hosts: cbaba
-    gather_facts: false
-    connection: local
-
-    tasks:
-      - include_tasks: cbaba.yml
-  
   - name: CallMANAGER
     hosts: cucm
     gather_facts: false
     connection: local
 
     tasks:
-      - include_tasks: cucm.yml
-      - include_tasks: ivrs.yml
+      - include_tasks: cucm-28.yml
+      - include_tasks: ivrs-28.yml
+      - include_tasks: sip-28.yml
